--- a/css/customer.css
+++ b/css/customer.css
@@ -66,7 +66,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: minmax(15rem, auto);
-    grid-auto-rows: 15rem;
+    grid-auto-rows: auto;
     grid-auto-columns: minmax(60%, auto);
 
 }
@@ -74,6 +74,7 @@
 .p-name {
     font-family: inherit;
     font-style: normal;
+    max-width: 2rem;
     font-weight: 700;
     color: var(--token-05828702-56c4-4b7f-843e-eab3a79a0bd7, rgb(0, 0, 0));
     letter-spacing: -0.3px;
@@ -81,6 +82,12 @@
     margin-bottom: 10%;
 }
 
+
+#sname{
+    position: absolute;
+    top: 0;
+    right: 66%;
+}
 .desc {
     color: #7c7a7a;
     font-size: 80%;
