--- a/css/reports.css
+++ b/css/reports.css
@@ -4,3 +4,34 @@
     font-weight: bold;
     
 }
+ul {
+    list-style-type: none;
+    margin: -8px;
+    padding: 15px;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow: hidden;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+      text-decoration: underline;
+      text-underline-offset: 10px;
+    
+  }
+
+  .active {
+    text-decoration: underline;
+    text-underline-offset: 10px;  }
