--- a/css/order.css
+++ b/css/order.css
@@ -60,6 +60,10 @@
     font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.main-body{
+    min-height: fit-content;
+}
+
 .main-container {
     margin: 7% 2% 0 3%;
     position: relative;
