--- a/css/search.css
+++ b/css/search.css
@@ -116,6 +116,14 @@
     height: 55%;
     width: 90%;
 }
+.fname{
+    margin-right: 0.4rem;
+}
+.product-title{
+    display: inline-flex;
+    flex-wrap: wrap;
+}
+
 
 .product-image {
     border-radius: 8px;
@@ -126,7 +134,7 @@
     overflow: hidden;
     border-radius: 10px;
     background-color: #e0ccfc;
-    margin: 8%;
+    margin: 12% 8% 8% 8%;
     padding-bottom: 1%;
     font-size: larger;
 }
@@ -155,7 +163,7 @@ img {
 
 .no-result{
     position: absolute;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     top: 50%;
     left: 50%;
